[gd_scene load_steps=5 format=3 uid="uid://drh7h7rb8g3xi"]

[ext_resource type="Script" uid="uid://cfhdej4kxa7le" path="res://MainScenes/main_game.gd" id="1_aj3je"]
[ext_resource type="PackedScene" uid="uid://mx3r7eiuiym3" path="res://Classes/player.tscn" id="1_u2kmd"]
[ext_resource type="PackedScene" uid="uid://e1rm6p4f1wo4" path="res://Classes/ball.tscn" id="2_aj3je"]
[ext_resource type="PackedScene" uid="uid://7tt5h3x8sc57" path="res://Classes/hud.tscn" id="4_ldcld"]

[node name="MainGame" type="Node"]
script = ExtResource("1_aj3je")

[node name="MainPlayer" parent="." instance=ExtResource("1_u2kmd")]
speed = 1000

[node name="MainBall" parent="." instance=ExtResource("2_aj3je")]
ball_speed = 5

[node name="BatStartPosition" type="Marker2D" parent="."]
position = Vector2(600, 760)

[node name="BallStartPosition" type="Marker2D" parent="."]
position = Vector2(601, 457)

[node name="LevelBoundary" type="Area2D" parent="."]

[node name="LeftWall" type="CollisionPolygon2D" parent="LevelBoundary"]
polygon = PackedVector2Array(0, -64, 0, 0, 0, 800, -64, 800, -64, -64)

[node name="RightWall" type="CollisionPolygon2D" parent="LevelBoundary"]
position = Vector2(1264, 0)
polygon = PackedVector2Array(0, -64, 0, 0, 0, 800, -64, 800, -64, -64)

[node name="TopWall" type="CollisionPolygon2D" parent="LevelBoundary"]
position = Vector2(42, -64)
rotation = -1.5708
scale = Vector2(0.99999, 1.52234)
polygon = PackedVector2Array(0, -64, 0, 0, 0, 800, -64, 800, -64, -64)

[node name="HUD" parent="." instance=ExtResource("4_ldcld")]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="area_shape_entered" from="MainPlayer" to="." method="_on_main_player_area_shape_entered"]
[connection signal="out_of_bounds" from="MainBall" to="." method="_on_main_ball_out_of_bounds"]
[connection signal="area_entered" from="LevelBoundary" to="." method="_on_level_boundary_area_entered"]
